syntax = "proto3";

message MarioListMsg {
	uint32 messageCount = 1;
	repeated MarioMsg mario = 2;
}

message ControllerListMsg {
	repeated ControllerMsg controller = 1;
}

message MarioMsg {
	ControllerMsg controller = 1;
	string playerName = 2;
	uint32 skinID = 3;
	uint32 action = 4;
	uint32 prevAction = 5;
	uint32 actionState = 6;
	uint32 actionTimer = 7;
	uint32 actionArg = 8;
	sint32 invincTimer = 9;
	uint32 framesSinceA = 10;
	uint32 framesSinceB = 11;
	uint32 wallKickTimer = 12;
	uint32 doubleJumpTimer = 13;
	repeated sint32 faceAngle = 14;
	repeated sint32 angleVel = 15;
	repeated float pos = 16;
	repeated float vel = 17;
	float forwardVel = 18;
	repeated sint32 rawData = 19;
	uint32 usedObjID = 20;
	uint32 socketID = 21;
}

message ControllerMsg {
	float stickX = 1;
	float stickY = 2;
	float stickMag = 3;
	uint32 buttonDown = 4;
	uint32 buttonPressed = 5;
	sint32 cameraYaw = 6;
	uint32 socketID = 7;
}

message ValidSocketsMsg {
	repeated uint32 validSockets = 1;
}